objects/Adimission__c.object
<CustomObject>
    <label>Adimission</label>
    <nameField>
        <displayFormat>ADN-{0000}</displayFormat>
        <label>Adimssion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adimissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-School</fullName>
                </value>
                <value>
                    <fullName>Class 1 to 5</fullName>
                </value>
                <value>
                    <fullName>Class 6 to 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <description>student which class is admitted</description>
        <label>Standard</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>LKG</fullName>
                </value>
                <value>
                    <fullName>UKG</fullName>
                </value>
                <value>
                    <fullName>CLASS I</fullName>
                </value>
                <value>
                    <fullName>CLASS II</fullName>
                </value>
                <value>
                    <fullName>CLASS III</fullName>
                </value>
                <value>
                    <fullName>CLASS IV</fullName>
                </value>
                <value>
                    <fullName>CLASS V</fullName>
                </value>
                <value>
                    <fullName>CLASS VI</fullName>
                </value>
                <value>
                    <fullName>CLASS VII</fullName>
                </value>
                <value>
                    <fullName>CLASS VIII</fullName>
                </value>
                <value>
                    <fullName>CLASS IX</fullName>
                </value>
                <value>
                    <fullName>CLASS X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_s_Name__c</fullName>
        <label>Mother&apos;s Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>NotBlank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Father_s_Name__c )</errorConditionFormula>
        <errorMessage>jb</errorMessage>
    </validationRules>
</CustomObject>